- Now it's possible retrieve data from Mongodb (only open DB) - Open register, User login WIP - Together Sparql and Mongodb editor

--- a/web/dataset.html
+++ b/web/dataset.html
@@ -182,7 +182,7 @@
                     </a>
                     <ul class="treeview-menu">
                         <li class="active"><a href="dataset.html"><i class="fa fa-circle-o"></i> Add Dataset</a></li>
-                        <li><a href="query.html"><i class="fa fa-circle-o"></i> SPARQL Editor</a></li>
+                        <li><a href="query.html"><i class="fa fa-circle-o"></i> Query Editor</a></li>
                         <li><a href="newquery.html"><i class="fa fa-circle-o"></i> Add Query</a></li>
                     </ul>
                 </li>
