--- a/web/newquery.html
+++ b/web/newquery.html
@@ -119,7 +119,7 @@
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="dataset.html"><i class="fa fa-circle-o"></i> Add Dataset</a></li>
-                        <li><a href="query.html"><i class="fa fa-circle-o"></i> SPARQL Editor</a></li>
+                        <li><a href="query.html"><i class="fa fa-circle-o"></i> Query Editor</a></li>
                         <li class="active"><a href="newquery.html"><i class="fa fa-circle-o"></i> Add Query</a></li>
                     </ul>
                 </li>
@@ -225,7 +225,10 @@
                     <option ng-repeat="dataset in datasets">{{dataset.Name}}</option>
                 </select>
                 <br>
-                <div id="divMongodb">Work In Progress</div>
+                <div id="divMongodb">
+                    <textarea style="width: 100%;" ng-model="queryMongo"
+                              placeholder='{"$and": [{"price": {"$lt": 10.25}},{"$or": [{"category": 2},{"category": 1}]}]}'></textarea>
+                </div>
                 <div id="divSparql">
                     <p class="text-light-blue">Write your query:</p>
                     <paper-shadow class="card" z="2">
