--- a/web/register.html
+++ b/web/register.html
@@ -157,7 +157,7 @@
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="dataset.html"><i class="fa fa-circle-o"></i> Add Dataset</a></li>
-                        <li><a href="query.html"><i class="fa fa-circle-o"></i> SPARQL Editor</a></li>
+                        <li><a href="query.html"><i class="fa fa-circle-o"></i> Query Editor</a></li>
                         <li><a href="newquery.html"><i class="fa fa-circle-o"></i> Add Query</a></li>
                     </ul>
                 </li>
@@ -216,25 +216,25 @@
                 <div class="register-box-body">
                     <form action="#" method="post">
                         <div class="form-group has-feedback">
-                            <input type="text" class="form-control" placeholder="Full name"/>
+                            <input type="text" class="form-control" name="name" ng-model="name" placeholder="Full name"/>
                             <span class="glyphicon glyphicon-user form-control-feedback"></span>
                         </div>
-                        <div class="form-group has-feedback">
-                            <input type="text" class="form-control" placeholder="Email"/>
+                        <div class="form-group has-feedback" name="email" id="email">
+                            <input type="text" class="form-control" ng-blur="checkEmail()" ng-model="email" placeholder="Email"/>
                             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
                         </div>
                         <div class="form-group has-feedback">
-                            <input type="password" class="form-control" placeholder="Password"/>
+                            <input type="password" class="form-control" ng-model="password" placeholder="Password"/>
                             <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                         </div>
                         <div class="form-group has-feedback">
-                            <input type="password" class="form-control" placeholder="Retype password"/>
+                            <input type="password" class="form-control" ng-model="repass" placeholder="Retype password"/>
                             <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
                         </div>
                         <div class="row">
                             <div class="col-xs-4">
 
-                                <paper-button type="submit" raised class="colored btn-block btn-flat"
+                                <paper-button ng-click="saveUser()" raised class="colored btn-block btn-flat"
                                               id="btn_save">Register</paper-button>
                             </div><!-- /.col -->
                         </div>
@@ -274,6 +274,7 @@
 <!-- Bootstrap 3.3.2 JS -->
 <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <!-- Dart -->
+<script type="application/dart" src="register.dart"></script>
 <script type="text/javascript" src="packages/browser/dart.js"></script>
 <!-- Sparkline -->
 <script src="plugins/sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
