restaurants demo WIP slovakian demo need some adjustments

--- a/web/dashboardRestaurants.html
+++ b/web/dashboardRestaurants.html
@@ -78,7 +78,7 @@
 
 
 </head>
-<body demo="slovakia" class="skin-green sidebar-collapse sidebar-open">
+<body demo="restaurants" class="skin-green sidebar-collapse sidebar-open">
 <div class="wrapper">
 
     <paper-shadow class="card" z="2"><header class="main-header">
@@ -148,7 +148,59 @@
         <section class="content">
             <!-- Small boxes (Stat box) -->
             <div class="row">
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-aqua">
+                        <div class="inner">
+                            <h3>150</h3>
+                            <p>New Orders</p>
 
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-bag"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div><!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-green">
+                        <div class="inner">
+                            <h3>53<sup style="font-size: 20px">%</sup></h3>
+                            <p>Bounce Rate</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div><!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-yellow">
+                        <div class="inner">
+                            <h3>44</h3>
+                            <p>User Registrations</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-person-add"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div><!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-red">
+                        <div class="inner">
+                            <h3>65</h3>
+                            <p>Unique Visitors</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-pie-graph"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div><!-- ./col -->
             </div>
             <!-- /.row -->
             <!-- Main row -->
@@ -164,7 +216,7 @@
                         </div>
                         <!-- box-body -->
                         <div class="box-body chart-responsive">
-                            <faceted-search class="dc-element"></faceted-search>
+                            <faceted-search params="district, stars" class="dc-element"></faceted-search>
                         </div>
                         <!-- /.box-body -->
                     </div>
@@ -174,11 +226,11 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
-                            <h3 class="box-title" id="here">Designation</h3>
+                            <h3 class="box-title" id="here">Handle Reservations</h3>
                         </div>
                         <!-- box-body -->
                         <div class="box-body chart-responsive">
-                            <pie-chart param="designation" class="dc-element"></pie-chart>
+                            <pie-chart param="newReservations" class="dc-element"></pie-chart>
                         </div>
                         <!-- /.box-body -->
                     </div>
@@ -188,11 +240,11 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
-                            <h3 class="box-title">Designation Scheme</h3>
+                            <h3 class="box-title">Food takeout</h3>
                         </div>
                         <!-- box-body -->
                         <div class="box-body chart-responsive">
-                            <pie-chart param="designationScheme" class="dc-element"></pie-chart>
+                            <pie-chart param="newTakeout" class="dc-element"></pie-chart>
                         </div>
                         <!-- /.box-body -->
                     </div>
@@ -209,19 +261,7 @@
                 <!-- right col (We are only adding the ID to make the widgets sortable)-->
                 <section class="col-lg-7 connectedSortable">
 
-                    <!-- leaflet-map -->
-                    <!--Widgets must have 'widget' class in order to render their loading screen-->
-                    <div class="box box-primary widget">
-                        <div class="box-header">
-                            <h3 class="box-title">Map</h3>
-                        </div>
-                        <!-- box-body -->
-                        <div class="box-body chart-responsive">
-                            <leaflet-map class="dc-element"></leaflet-map>
-                        </div>
-                        <!-- /.box-body -->
-                    </div>
-                    <!-- /.leaflet-map -->
+
 
                     <!--&lt;!&ndash; bar-chart &ndash;&gt;-->
                     <!--&lt;!&ndash;Widgets must have 'widget' class in order to render their loading screen&ndash;&gt;-->
@@ -245,7 +285,7 @@
                         <!--box-body -->
                         <div class="box-body chart-responsive">
 
-                            <sortable-table class="bootstrap dc-element" page="{{page}}" pagesize="8" footertemplate="defaultPager">
+                            <sortable-table params="stars, price, newReservations, newTakeout" class="bootstrap dc-element" page="{{page}}" pagesize="8" footertemplate="defaultPager">
 
                             </sortable-table>
 
