restaurants demo WIP slovakian demo fixed

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -164,7 +164,7 @@
                         </div>
                         <!-- box-body -->
                         <div class="box-body chart-responsive">
-                            <faceted-search class="dc-element"></faceted-search>
+                            <faceted-search params="designation, designationScheme" class="dc-element"></faceted-search>
                         </div>
                         <!-- /.box-body -->
                     </div>
@@ -245,7 +245,7 @@
                         <!--box-body -->
                         <div class="box-body chart-responsive">
 
-                            <sortable-table class="bootstrap dc-element" page="{{page}}" pagesize="8" footertemplate="defaultPager">
+                            <sortable-table params="name, designation, designationScheme" class="bootstrap dc-element" page="{{page}}" pagesize="8" footertemplate="defaultPager">
 
                             </sortable-table>
 
