--- a/web/dashboardRestaurants.html
+++ b/web/dashboardRestaurants.html
@@ -285,7 +285,7 @@
                         <!--box-body -->
                         <div class="box-body chart-responsive">
 
-                            <sortable-table params="stars, price, newReservations, newTakeout" class="bootstrap dc-element" page="{{page}}" pagesize="8" footertemplate="defaultPager">
+                            <sortable-table params="name, stars, price, newReservations, newTakeout" class="bootstrap dc-element" page="{{page}}" pagesize="8" footertemplate="defaultPager">
 
                             </sortable-table>
 
