--- a/web/dataset.html
+++ b/web/dataset.html
@@ -91,43 +91,49 @@
                     <!-- User Account: style can be found in dropdown.less -->
                     <li class="dropdown user user-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="dist/img/user1-128x128.jpg" class="user-image" alt="User Image"/>
-                            <span class="hidden-xs">Dummy GSI</span>
+                            <div class="user-bar">
+                                <img src="" class="user-image" alt="User Image"/>
+                                <span class="hidden-xs user-name"></span>
+                            </div>
+                        </a>
+                            <ul class="dropdown-menu">
+                                <!-- User image -->
+                                <li class="user-header user-div">
+                                    <img src="" class="img-circle user-image3" alt="User Image">
+                                    <p class="user-name3">
+
+                                        <small>Member since Nov. 2012</small>
+                                    </p>
+                                </li>
+                                <!-- Menu Footer-->
+                                <li class="user-footer">
+                                    <div class="pull-right">
+                                        <button ng-click="logout()" class="btn btn-default btn-flat">Sign out</button>
+                                    </div>
+                                </li>
+                            </ul>
+                    </li>
+                    <li class="dropdown user user-menu sign">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Sign In
                         </a>
                         <ul class="dropdown-menu">
                             <li><div class="login-box-body">
                                 <p class="login-box-msg">Sign in to start your session</p>
-                                <form action="#" method="post">
+                                <form id="loginForm" role="form" >
                                     <div class="form-group has-feedback">
-                                        <input type="text" class="form-control" placeholder="Email"/>
-                                        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-                                    </div>
-                                    <div class="form-group has-feedback">
-                                        <input type="password" class="form-control" placeholder="Password"/>
+                                        <input type="password" class="form-control" id="password"
+                                               placeholder="Admin Password"/>
                                         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-xs-8">
-                                            <div class="checkbox icheck">
-                                                <label>
-                                                    <input type="checkbox"> Remember Me
-                                                </label>
-                                            </div>
-                                        </div><!-- /.col -->
-                                        <div class="col-xs-4">
-                                            <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
-                                        </div><!-- /.col -->
                                     </div>
                                 </form>
 
                                 <div class="social-auth-links text-center">
-                                    <p>- OR -</p>
-                                    <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using Facebook</a>
-                                    <a href="#" class="btn btn-block btn-social btn-google-plus btn-flat"><i class="fa fa-google-plus"></i> Sign in using Google+</a>
+                                    <button class="btn btn-block btn-social btn-facebook btn-flat">
+                                        <i class="fa fa-facebook"></i> Sign in using Facebook</button>
+                                    <button ng-click="login()"class="btn btn-block btn-social btn-google-plus btn-flat">
+                                        <i class="fa fa-google-plus"></i> Sign in using Google+</button>
                                 </div><!-- /.social-auth-links -->
-
-                                <a href="#">I forgot my password</a><br>
-                                <a href="register.html" class="text-center">Register a new membership</a>
 
                             </div><!-- /.login-box-body --></li>
                         </ul>
@@ -143,26 +149,31 @@
         <section class="sidebar">
 
             <!-- Sidebar user panel -->
-            <div class="user-panel">
-                <div class="pull-left image">
-                    <img src="dist/img/user1-128x128.jpg" class="img-circle" alt="User Image" />
-                </div>
-                <div class="pull-left info">
-                    <p>Dummy GSI</p>
+            <div class="user-side">
+                <div class="user-panel">
+                    <div class="pull-left image">
+                        <img src="" class="img-circle user-image2" alt="User Image" />
+                    </div>
+                    <div class="pull-left info">
+                        <p class="user-name2"></p>
 
-                    <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                    </div>
                 </div>
+                <!-- search form -->
+                <div class="sidebar-form">
+                <form action="#" method="get">
+                    <div class="input-group">
+                        <input type="text" name="q" class="form-control" placeholder="Search..."/>
+                         <span class="input-group-btn">
+                             <button type='submit' name='search' id='search-btn'
+                                     class="btn btn-flat"><i class="fa fa-search"></i></button>
+                         </span>
+                    </div>
+                </form>
+                </div>
+                <!-- /.search form -->
             </div>
-            <!-- search form -->
-            <form action="#" method="get" class="sidebar-form">
-                <div class="input-group">
-                    <input type="text" name="q" class="form-control" placeholder="Search..."/>
-              <span class="input-group-btn">
-                <button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i></button>
-              </span>
-                </div>
-            </form>
-            <!-- /.search form -->
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
                 <li class="header">MAIN NAVIGATION</li>
